# python_project_template

./: .buildinfo  .env  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.html  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE.html  README.html  README.md  STYLEGUIDE.html  STYLEGUIDE.md  _README.md  api.html  azure-docbuild.yml  azure-pipelines.yml  cli.__main__.html  cli.html  cli.mypackage.html  genindex.html  index.html  mypackage.api.html  mypackage.html  mypackage.subpackage1.html  mypackage.subpackage1.module1.html  mypackage.subpackage2.html  mypackage.subpackage2.module2.html  mypackage.utils.html  mypackage.utils.logging.html  names.csv  objects.inv  py-modindex.html  pyproject.toml  rename_package.ps1  requirements-dev.txt  requirements.txt  ruff.toml  search.html  (+3 more)
.github/workflows/: _build_and_publish_documentation.yml  _build_package.yml  _code_quality.yml  _merge_into_release.yml  _test.yml  _test_future.yml  main.yml  publish_release.yml
_autosummary/: my_package.api.MyPackageProcess.html  my_package.api.html  my_package.subpackage1.html  my_package.subpackage1.module1.html  my_package.subpackage2.html  my_package.subpackage2.module2.html  my_package.utils.html  my_package.utils.logging.html
_sources/: mypackage.subpackage1.rst.txt
_sources/_autosummary/: my_package.subpackage1.rst.txt  my_package.utils.logging.rst.txt  my_package.utils.rst.txt
branch/main/: .buildinfo  CHANGELOG.html  LICENSE.html  README.html  STYLEGUIDE.html  api.html  cli.__main__.html  cli.html  cli.my_package.html  genindex.html  index.html  my_package.api.html  my_package.html  my_package.subpackage1.html  my_package.subpackage1.module1.html  my_package.subpackage2.html  my_package.subpackage2.module2.html  my_package.utils.html  my_package.utils.logging.html  mypackage.html  mypackage.subpackage2.html  mypackage.subpackage2.module2.html  mypackage.utils.html  mypackage.utils.logging.html  objects.inv  py-modindex.html  search.html  searchindex.js
branch/main/_autosummary/: my_package.api.MyPackageProcess.html  my_package.api.html  my_package.api.run.html  my_package.cli.html  my_package.cli.my_package.html  my_package.cli.my_package.main.html  my_package.html  my_package.subpackage1.html  my_package.subpackage1.module1.html  my_package.subpackage1.module1.int_to_str.html  my_package.subpackage2.html  my_package.subpackage2.module2.html  my_package.subpackage2.module2.str_to_int.html  my_package.utils.html  my_package.utils.logging.configure_logging.html  my_package.utils.logging.html
branch/main/_sources/: cli.__main__.rst.txt  cli.rst.txt
branch/main/_sources/_autosummary/: my_package.api.MyPackageProcess.rst.txt  my_package.api.rst.txt  my_package.api.run.rst.txt  my_package.cli.my_package.main.rst.txt  my_package.cli.my_package.rst.txt  my_package.cli.rst.txt  my_package.rst.txt  my_package.subpackage1.module1.int_to_str.rst.txt  my_package.subpackage1.module1.rst.txt  my_package.subpackage1.rst.txt  my_package.subpackage2.module2.rst.txt  my_package.subpackage2.module2.str_to_int.rst.txt  my_package.subpackage2.rst.txt  my_package.utils.logging.configure_logging.rst.txt  my_package.utils.logging.rst.txt  my_package.utils.rst.txt
branch/refs--tags--v0.1.0/: .buildinfo  CHANGELOG.html  README.html  STYLEGUIDE.html  cli.html  cli.mypackage.html  mypackage.api.html  mypackage.subpackage1.html  mypackage.subpackage1.module1.html  search.html  searchindex.js
docs/source/: api.rst  cli.mypackage.rst  conf.py  index.rst  my_package.api.rst  my_package.rst  my_package.subpackage1.module1.rst  my_package.utils.logging.rst  mypackage.rst  mypackage.subpackage1.module.rst  mypackage.subpackage1.rst  mypackage.subpackage2.module.rst  mypackage.subpackage2.module2.rst  mypackage.subpackage2.rst  mypackage.utils.logging.rst  mypackage.utils.rst
src/my_package/: api.py
src/my_package/cli/: __main__.py
src/my_package/utils/: logging.py
src/mypackage/: api.py
src/mypackage/cli/: my_package.py
tests/: conftest.py  test_api.py
tests/cli/: test_my_package_cli.py  test_mypackage_cli.py
tests/subpackage1/: test_module1.py
tests/subpackage2/: test_module2.py
