[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/my_package",
    "tests",
    ".coveragerc",
    ".editorconfig",
    "pytest.ini",
    "ruff.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/my_package",
]

[project]
name = "my-package"
version = "0.1.9"
description = "example package short description."
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Author One", email = "author.one@xyz.com" },
    { name = "Author Two", email = "author.two@xyz.com" },
]
maintainers = [
    { name = "Author Three", email = "author.three@xyz.com" },
]
keywords = [
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    # "Operating System :: MacOS",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dictIO>=0.4.0",
    "numpy>=1.26,<2.0",
    "matplotlib>=3.9",
    "torch==2.4.1",
]

[project.optional-dependencies]
cuda = [
    "torch==2.4.1+cu124",
]

[project.urls]
Homepage = "https://github.com/owner/my-package"
Documentation = "https://owner.github.io/my-package/README.html"
Repository = "https://github.com/owner/my-package.git"
Issues = "https://github.com/owner/my-package/issues"
Changelog = "https://github.com/owner/my-package/blob/main/CHANGELOG.md"


[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8.3",
    "pyright>=1.1.390",
    "mypy>=1.11.1",
    "sourcery>=1.27",
    "pre-commit>=3.8",
    "Sphinx>=8.1",
    "sphinx-argparse-cli>=1.19",
    "sphinx-autodoc-typehints>=2.2",
    "myst-parser>=4.0",
    "furo>=2024.8",
    "nbconvert>=7.16",
    "jupyter>=1.1",
    "jupyter-client>=8.6",
    "pandas-stubs>=2.2",
    "types-tqdm>=4.66",
    "types-psutil>=6.0",
]
find-links = [
    "https://download.pytorch.org/whl/torch",
]
native-tls = true


[project.scripts]
my-package = "my_package.cli.my_package:main"


[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
]
mypy_path = "stubs"
files = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "^src/folder_to_be_excluded/",
]
check_untyped_defs = true
disable_error_code = [
    "import-untyped",
]


[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "src/folder_to_be_excluded",
]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingParameterType = "error"
reportUnknownParameterType = "warning"
reportUnknownMemberType = "warning"                # consider to set to `false` if you work a lot with matplotlib and pandas, which are both not properly typed and known to trigger this warning
reportMissingTypeArgument = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnusedCallResult = "warning"
reportUnusedExpression = "warning"
reportMatchNotExhaustive = "warning"
reportShadowedImports = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
# Activate the following rules only locally and temporary, i.e. for a QA session.
# (For server side CI they are considered too strict.)
# reportMissingTypeStubs = true
# reportConstantRedefinition = "warning"
# reportImportCycles = "warning"
# reportImplicitStringConcatenation = "warning"
