[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/my_package",
    "tests",
    ".coveragerc",
    ".editorconfig",
    ".pre-commit-config.yaml",
    "manage.py",
    "pyproject.toml",
    "pytest.ini",
    "ruff.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/my_package",
]

[project]
name = "my-package"
version = "0.1.0"
description = "example package short description."
readme = "README.md"
requires-python = ">= 3.10, < 3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Author One", email = "author.one@xyz.com" },
    { name = "Author Two", email = "author.two@xyz.com" },
    { name = "Author Three", email = "author.three@xyz.com" },
]
maintainers = [
    { name = "Maintainer One", email = "maintainer.one@xyz.com" },
    { name = "Maintainer Two", email = "maintainer.two@xyz.com" },
]
keywords = [
    "Keyword One",
    "Keyword Two",
    "Keyword Three",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    # "Operating System :: MacOS",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dictIO>=0.4.1",
    "numpy>=1.26; python_version < '3.13'",
    "numpy>=2.2; python_version >= '3.13'",
    "torch==2.6.0",
]

[project.optional-dependencies]
cuda = [
    "torch==2.6.0+cu126",
]

[project.urls]
Homepage = "https://github.com/owner/my-package"
Documentation = "https://owner.github.io/my-package/README.html"
Repository = "https://github.com/owner/my-package.git"
Issues = "https://github.com/owner/my-package/issues"
Changelog = "https://github.com/owner/my-package/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.11.0",
    "pyright>=1.1.396",
    "mypy>=1.15",
    "sourcery>=1.35",
    "pre-commit>=4.0",
    "Sphinx>=8.2",
    "sphinx-argparse-cli>=1.19",
    "sphinx-autodoc-typehints>=3.0",
    "sphinxcontrib-mermaid>=1.0.0",
    "myst-parser>=4.0",
    "furo>=2024.8",
    "jupyter>=1.1",
    "pandas-stubs>=2.2",
]

[tool.uv]
default-groups = [
    "dev",
]
find-links = [
    "https://download.pytorch.org/whl/torch",
]
native-tls = true


[project.scripts]
my-package = "my_package.cli.__main__:main"


[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
]
mypy_path = "stubs"
files = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "^src/folder_to_be_excluded/",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]


[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "src/folder_to_be_excluded",
]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingParameterType = "error"
reportUnknownParameterType = "warning"
reportUnknownMemberType = "warning"                # consider to set to `false` if you work a lot with matplotlib and pandas, which are both not properly typed and known to trigger this warning
reportMissingTypeArgument = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnusedCallResult = "warning"
reportUnusedExpression = "warning"
reportMatchNotExhaustive = "warning"
reportShadowedImports = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
# Activate the following rules only locally and temporary, i.e. for a QA session.
# (For server side CI they are considered too strict.)
# reportMissingTypeStubs = true
# reportConstantRedefinition = "warning"
# reportImportCycles = "warning"
# reportImplicitStringConcatenation = "warning"
