[metadata]
name = mypackage
version = 0.0.1
summary = example package.
description = example package short description.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://grd-apidoc.azurewebsites.net/mypackage/README.html
project_urls =
    AzureDevOps = https://dnvgl-one.visualstudio.com/DefaultCollection/GRD/_git/mypackage
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
platform = Python3.x
readme_file = README.md
author = Author 1
author_email = "Author 1" <author.1@dnv.com>
maintainer = Author 2
maintainer_email = "Author 2" <author.2@dnv.com>

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy>=1.23
    pandas>=1.5
    scipy>=1.9
    matplotlib>=3.6
    # somedependencyonpypi>=0.1.0
    # someprojectinmylocaldev @ file:../someprojectinmylocaldev

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    mypackage = mypackage.cli.mypackage:main

[tool:pytest]
testpaths = tests
addopts = --strict-markers
xfail_strict = True

[coverage:run]
source = mypackage
branch = True

[coverage:report]
fail_under = 10.0
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/mypackage
    */site-packages/mypackage

[tox:tox]
isolated_build = True
envlist = py{39,310,311}-{linux,macos,windows}
# envlist = py{39,310,311}-{windows}
# envlist = py{39,310,311}

[testenv]
deps =
    pytest>=7.2
    pytest-cov>=4.0
    pytest-randomly>=3.12
commands =
    pytest --cov --cov-config setup.cfg {posargs}
