[metadata]
name = mypackage
version = 0.0.1
summary = example package.
description = example package short description.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://AuthorOne.github.io/mypackage/README.html
project_urls =
    GitHub = https://github.com/AuthorOne/mypackage
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
platform = Python3.x
readme_file = README.md
author = Author One
author_email = "Author One" <author.one@xyz.com>
maintainer = Author Two
maintainer_email = "Author Two" <author.two@xyz.com>

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    dictIO>=0.2.6
    # some_package_on_pypi>=0.1.0
    # some_project_in_my_local_dev @ file:../some_project_in_my_local_dev

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    mypackage = mypackage.cli.mypackage:main

[tool:pytest]
testpaths = tests
addopts = --strict-markers
xfail_strict = True

[coverage:run]
source = mypackage
branch = True

[coverage:report]
fail_under = 10.0
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/mypackage
    */site-packages/mypackage

[tox:tox]
isolated_build = True
envlist = py{39,310,311}-{linux,macos,windows}
# envlist = py{39,310,311}-{windows}
# envlist = py{39,310,311}

[testenv]
deps =
    pytest>=7.2
    pytest-cov>=4.0
    pytest-randomly>=3.12
commands =
    pytest --cov --cov-config setup.cfg {posargs}
